--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Alphabet</title>title</title>
+        <title>Alphabet</title>
     </head>
     <body>
         <div>
@@ -19,7 +19,7 @@
                     <td>A</td><td>B</td>
                     </tr>
                     <tr>
-                    <td></td><tc>B</tc>
+                    <td></td><td>B</td>
                     </tr>
                     <tr>
                     <td></td><td>C</td>
